Dashboard and Socket Context Configuration

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Red Tetris</title>
+    <link type="text/css" rel="stylesheet" href="./css/nes.min.css"/>
 </head>
 <body>
     <div id="app"></div>
